# FloppyLib

./: CMakeLists.txt  FloppyLib.md  README.md
include/: CylinderHeadSector.h  Disk.h  DiskGeometry.h  DiskSet.h  DiskStatistics.h  Ebcdic.h  FloppyLib.h  InterchangeDisk.h  InterchangeFile.h  InterchangeVolume.h  Mode.h  Sector.h  Track.h  Types.h
src/: CylinderHeadSector.cpp  D88Functions.cpp  D88Functions.h  Disk.cpp  DiskGeometry.cpp  DiskSet.cpp  DiskStatistics.cpp  FloppyLib.cpp  ImdFunctions.cpp  ImdFunctions.h  InterchangeDisk.cpp  InterchangeFile.cpp  InterchangeVolume.cpp  Mode.cpp  Sector.cpp  Track.cpp
